style(Breadcrumb): Update breadcrumb structure and styling
Update breadcrumb styling to mirror DC/OS UI kit. Update markup as needed to support new styling. Remove redudant breadcrumb styling.

--- a/src/styles/components/icons/styles.less
+++ b/src/styles/components/icons/styles.less
@@ -70,12 +70,12 @@
 
     &.icon-grey,
     &.light-grey {
-      color: color-lighten(@neutral, 30%);
+      color: @grey-dark;
 
       a & {
 
         &:hover {
-          color: color-lighten(@neutral, 20%);
+          color: tint(@grey-dark, 20%);
         }
       }
 
