--- a/src/styles/components/modal/full-screen/variables.less
+++ b/src/styles/components/modal/full-screen/variables.less
@@ -1,8 +1,8 @@
 @modal-full-screen-enabled: true;
 
-@modal-full-screen-header-title-color: @page-header-breadcrumbs-color;
-@modal-full-screen-header-title-font-size: @page-header-breadcrumbs-font-size;
-@modal-full-screen-header-title-font-weight: @page-header-breadcrumbs-font-weight;
+@modal-full-screen-header-title-color: @grey-dark;
+@modal-full-screen-header-title-font-size:  18px;
+@modal-full-screen-header-title-font-weight: 24px;
 
 @modal-full-screen-header-title-line-height: @button-height;
 @modal-full-screen-header-title-line-height-screen-large: @button-height-screen-large;
