style(page-header): Adjust page-header z-index
Adjust z-index of page-header so that it sits above page-body to allow page-header border to remain visible on scroll.

--- a/src/styles/variables/variables-z-index.less
+++ b/src/styles/variables/variables-z-index.less
@@ -18,6 +18,9 @@
 @z-index-header-border: 1;
 @z-index-header-tabs: @z-index-header-border + 1;
 
+@z-index-page-body: 1;
+@z-index-page-header: @z-index-page-body + 1;
+
 @z-index-json-editor-help-tooltip: @z-index-modal - 1;
 
 @z-index-menu-tabbed-item-active-indicator: @z-index-header-tabs + 1;
