--- a/src/styles/layout/page-header/styles.less
+++ b/src/styles/layout/page-header/styles.less
@@ -7,6 +7,7 @@
     box-shadow: 0 0 0 1px fade(@grey-dark, 15%);
     flex: 0 0 auto;
     position: relative;
+    z-index: @z-index-page-header;
 
     .page-header-section {
       align-items: center;
