--- a/src/styles/layout/page-header/navigation/variables.less
+++ b/src/styles/layout/page-header/navigation/variables.less
@@ -18,17 +18,17 @@
 // Margin Top
 
 @page-header-navigation-tabs-margin-top: 16px;
-@page-header-navigation-tabs-margin-top-screen-small: null;
-@page-header-navigation-tabs-margin-top-screen-medium: null;
-@page-header-navigation-tabs-margin-top-screen-large: null;
+@page-header-navigation-tabs-margin-top-screen-small: 16px;
+@page-header-navigation-tabs-margin-top-screen-medium: 16px;
+@page-header-navigation-tabs-margin-top-screen-large: 16px;
 @page-header-navigation-tabs-margin-top-screen-jumbo: 28px;
 
 // Margin Bottom
 
 @page-header-navigation-tabs-margin-bottom: -25px;
-@page-header-navigation-tabs-margin-bottom-screen-small: null;
-@page-header-navigation-tabs-margin-bottom-screen-medium: null;
-@page-header-navigation-tabs-margin-bottom-screen-large: null;
+@page-header-navigation-tabs-margin-bottom-screen-small: -25px;
+@page-header-navigation-tabs-margin-bottom-screen-medium: -25px;
+@page-header-navigation-tabs-margin-bottom-screen-large: -25px;
 @page-header-navigation-tabs-margin-bottom-screen-jumbo: -33px;
 
 // Margin Left
