--- a/src/styles/layout/page-body/styles.less
+++ b/src/styles/layout/page-body/styles.less
@@ -10,5 +10,10 @@
     .flex-item-shrink-1 {
       min-height: 1px;
     }
+
+    .container {
+      margin-left: auto;
+      margin-right: auto;
+    }
   }
 }
