feat(FrameworkConfiguration): address initial review comments
1. Add activeTab into state, refactor the focus field code == clearer now
2. Explicit return false to avoid type possible coercion issues
3. Add some null checks and extra safety for possible unexpected cases
4. other minor tweaks/cleanup

--- a/src/styles/components/menu-tabbed/styles.less
+++ b/src/styles/components/menu-tabbed/styles.less
@@ -168,6 +168,10 @@
       justify-content: space-between;
       padding-right: 10px;
     }
+
+    &.padded-right {
+      padding-right: 5px;
+    }
   }
 
   .form-tabs-list {
