--- a/src/styles/components/framework-configuration/styles.less
+++ b/src/styles/components/framework-configuration/styles.less
@@ -14,6 +14,6 @@ legend {
   text-transform: capitalize;
 }
 
-.flush-bottom.message.message-warning p {
+.pre-install-notes.message.message-warning p {
   display: inline;
 }
