fix(Table Headers): Transform Table Column Headers to Title Case
A decision was made at one point to capitalize all the strings used in table column headers across DC/OS. The desired presentation is Title Case. Update all heading var definitions to use title case, making it easier to apply any future style changes as text transforms.

--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -102,8 +102,8 @@
 
 // Tables
 
-@import 'content/tables/variables.less';
-@import 'content/tables/styles.less';
+// @import 'content/tables/variables.less';
+// @import 'content/tables/styles.less';
 
 // Tables: Simple Variant
 
