refactor(tables): Update table classes to match UI Kit border styling
Mirror the borderless table appearance, as well as align out table cells flush against the edge of the table by using CNVS supplied class names.

--- a/src/styles/content/tables/table-simple/styles.less
+++ b/src/styles/content/tables/table-simple/styles.less
@@ -1,7 +1,7 @@
 & when (@table-simple-enabled) {
 
   .table-simple {
-    &:extend(.table-borderless-outer all);
+    &:extend(.table-flush table-borderless-outer all);
     &:extend(.table-borderless-inner-columns all);
 
     // The extra specificity is needed to override CNVS defaults.
