--- a/src/styles/components/modal/styles.less
+++ b/src/styles/components/modal/styles.less
@@ -1,5 +1,11 @@
 & when (@modal-enabled) {
 
+  // Remove margins from modal titles
+  .modal-header-title {
+    margin-bottom: 0;
+    margin-top: 0;
+  }
+
   .modal {
     // We need the extra specificity here, so we have to nest.
     .modal-header,
