refactor(message): Rename alert variable to message variable

--- a/src/styles/components/message/styles.less
+++ b/src/styles/components/message/styles.less
@@ -9,7 +9,7 @@
     &-icon {
       fill: currentColor;
       flex: 0 0 auto;
-      margin-right: @alert-icon-margin-right;
+      margin-right: @message-icon-margin-right;
     }
 
     &-content {
